--- a/src/app/vehicle-info-form/components/vehicle-license-plate/vehicle-license-plate.component.html
+++ b/src/app/vehicle-info-form/components/vehicle-license-plate/vehicle-license-plate.component.html
@@ -3,9 +3,9 @@
   <input [formControl]="licencePlateControl" type="text" mask="AA-AA-AA"
          class="mt-1 block w-full rounded-md bg-yellow-400 focus:border-gray-500 focus:bg-yellow-300 focus:ring-0"
          name="kenteken" placeholder="Bijvoorbeeld AA-BB-12">
-  <ng-container *ngIf="licencePlateControl.dirty && licencePlateControl.invalid">
-    <div *ngIf="licencePlateControl.errors?.outdated as outdated" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
-      <div class="font-bold">{{ outdated }}</div>
-    </div>
-  </ng-container>
+  <div
+    *ngIf="licencePlateControl.dirty && licencePlateControl.invalid && licencePlateControl.errors?.outdated as outdated"
+    class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
+    <div class="font-bold">{{ outdated }}</div>
+  </div>
 </label>
